$Id$

2022-01-08  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: adjust json::str2key() calls as requested

2022-01-08  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: add json for the Start stop cycle counter
	log page. Rejig some of the other SCSI json. 

2022-01-07  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: remove jsonify_name() and use
	json::str2key() where required. No user space
	visible changes.

2022-01-07  Alex Samorukov <samm@os2.kiev.ua>
	drivedb.h: 
	  - Add L3 EVO SSD (#1354)
	  - Add INTEL SSDSCKKF512G8 SATA 512GB (#1244)
	  - Extend regexp for the Sandisk SD9SB8W series (#1112)

2022-01-06  Christian Franke  <franke@computer.org>

	json.cpp, json.h: Allow to use any string for object keys.
	Convert to final key with new public function 'json::str2key()'.
	Rename related variables from 'key' to 'keystr'.

2022-01-06  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: 
	  - SanDisk SSD PLUS 2000GB/UP4504RL (#1503)
	  - Western Digital PiDrive Foundation Edition (#1007)
	  - Fixed Supermicro SATA DOM (SuperDOM) entry (#1380)
	  - Extended regexp to support WDC WD40NDZM-59A8KS1 (#1474)
	  - Seagate FreePlay HDD (#1405)

2022-01-05  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: prefix most SCSI specific JSON
	top level names with 'scsi_'. Add SCSI self
	test JSON plus a few corrections.

2022-01-05  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: add Lexar 128GB SSD (#1529)

2022-01-05  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: first cut at adding json to the
	self-test log page.
	scsicmds.h/.cpp: add scsi_get_sense_key_str()
	helper to fetch SCSI sense key as a C string

2022-01-04  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: printf() spotted in
	scsiPrintPendingDefectsLPage() by Yannick Hemery.
	Changed to jout().

2022-01-03  Douglas Gilbert  <dgilbert@interlog.com>

	utility.h: overload jsonify_name() to take a C
	string or a std::string. Use in scsiprint.cpp